--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,8 @@ header > * {
     border-radius: 5%;
     text-decoration: none;
     left:1em;
+    font-family: Helvetiva Neue-Bold;
+
 }
 /*FORMATOS DEL FORMULARIO*/
 
@@ -35,6 +37,7 @@ header > form > input{
     left:5em;
     background-color: #3487b8;
     height: 10%;
+    border:none;
 
 }
 .format-form{
@@ -45,6 +48,7 @@ header > form > input{
     width:15%;
     border-radius: 3%;
     background-color: #3487b8;
+    margin-left:0.5em;
 }
 .fa-search {
     color:white;
@@ -93,3 +97,104 @@ header > nav{
 }
 
 /**********ESTILIZANDO EL MAIN********/
+
+/* SEGUNDA BARRA DE NAVEGACION*/
+main > section > nav {
+    position:relative;
+    display:inline-block;
+    width:40%;
+    left:0;
+    margin:1%;
+    }
+
+main > section > nav > a {
+    text-decoration: none;
+    color:white;
+    padding:0.5em;
+}
+
+.click:hover{
+    background-color: #006caa;
+    border-radius: 5%;
+    font-weight:bolder;
+}
+
+main > section > nav > a > i{
+    padding:0.3em;
+    }
+
+.formt-border{
+    border-left:1px solid white;
+    opacity: 0.3;
+}
+
+.format-Nombre-tablero{
+    font-weight: bold;
+    font-family: Helvetiva Neue-Bold Italic;
+    font-size:18px;
+}
+
+/*FORMATOS PARA LA ETAPA DE AÑADIR LISTA*/
+
+.formato-crear-lista {
+    display:inline-block;
+    background-color:#005485;
+    width:20%;
+    height: 6vh;
+    border-radius: 5%;
+    color: white;
+    margin: 2%;
+    padding-left:0.5em;
+    padding-top:0.5em;
+    opacity: 0.5;
+    font-family: cursive;
+}
+
+/*FORMATOS PARA EL FORMULARIO:INPUT Y BOTON DE GUARDAR */
+.formato-container{
+    display:block;
+    background-color: #e2e4e6;
+    width:20%;
+    height: 15vh;
+    border-radius:3%;
+    margin:2%;
+
+}
+.formato-input{
+    background:rgba(0,0,0,0.1);
+    border-color:#1111;
+    width:17.5%;
+    height: 5vh;
+    position:absolute;
+    outline: none;
+    border:none;
+    margin-left: 0.8em;
+    margin-top:0.6em;
+    border-radius: 5%;
+    border:1px solid rgba(0,0,0,0.3);
+    font-family:cursive;
+    font-size:14px;
+    color: rgba(0,0,0,0.3);
+    padding-left: 0.8em;
+    
+}
+.formato-input::placeholder{
+    color:black;
+    opacity: 0.7;
+}
+
+.formato-boton{
+    position:absolute;
+    background-color: #519839;
+    color:white;
+    padding:0.5em;
+    top:12em;
+    left:2em;
+    font-size:14px;
+    text-decoration:none;
+    width:8%;
+    height: 5vh;
+    border-radius: 2%;
+    outline: none;
+    margin:0.8em;
+}
