--- a/css/main.css
+++ b/css/main.css
@@ -198,3 +198,31 @@ main > section > nav > a > i{
     outline: none;
     margin:0.8em;
 }
+
+/* FORMATOS PARA LA PARTE DONDE APARECE EL TITULO ALMACENADO Y EL LINK AGREGAR UNA TARJETA*/
+
+.formato-ContainerTitle{
+    display:inline-block;
+    background-color: #e2e4e6;
+    width:20%;
+    height: 12vh;
+    border-radius:3%;
+    margin:2%;
+
+}
+.formato-newLink-tarjeta{
+    display:inline-block;
+    font-style: italic;
+    color: rgba(0,0,0,0.8);
+    text-decoration: none;
+    width:100%;
+    height: 6vh;
+}
+
+.format-title{
+    margin-left: 0.5em;
+    text-align: center;
+}
+.formato-newLink-tarjeta:hover{
+    background-color: #cdd2d4;
+}
