--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,7 @@ main > section > nav > a > i{
     padding-top:0.5em;
     opacity: 0.5;
     font-family: cursive;
+    text-decoration:none;
 }
 
 /*FORMATOS PARA EL FORMULARIO:INPUT Y BOTON DE GUARDAR */
@@ -242,7 +243,7 @@ main > section > nav > a > i{
 
 .formato-newContainer-textArea{
     display:inline-block;
-    background-color: #e2e4e6;
+    background-color: #cce1f7;
     width:20%;
     height: 28vh;
     border-radius:3%;
@@ -256,3 +257,25 @@ main > section > nav > a > i{
     display: inline-block;
     top:18em;
 }
+
+/* FORMATOS PARA COLOCAR LOS DATOS GUARDADOS DE TITLE Y TEXTAREA*/
+
+.format-containerForFinishForm{ 
+    display:inline-block;
+    background-color: #e2e4e6;
+    width:20%;
+    height: 28vh;
+    border-radius:3%;
+    margin:2%;
+
+    height: 35vh;
+}
+.formatParrafo{
+    max-width:90%;
+    background-color: white;
+    border-radius: 5%;
+    margin:5%;
+    font-family: cursive;
+    
+}
+
