--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,10 @@ header > nav{
 }
 
 /**********ESTILIZANDO EL MAIN********/
-
+#espacio-trabajo{
+    position:relative;
+    width:100%;
+}
 /* SEGUNDA BARRA DE NAVEGACION*/
 main > section > nav {
     position:relative;
@@ -153,20 +156,22 @@ main > section > nav > a > i{
 
 /*FORMATOS PARA EL FORMULARIO:INPUT Y BOTON DE GUARDAR */
 .formato-container{
-    display:block;
+    position:relative;
+   /* display:inline-block;*/
     background-color: #e2e4e6;
     width:20%;
     height: 15vh;
     border-radius:3%;
     margin:2%;
+    float:left;
 
 }
 .formato-input{
+    display: block;
     background:rgba(0,0,0,0.1);
     border-color:#1111;
-    width:17.5%;
+    width:85%;
     height: 5vh;
-    position:absolute;
     outline: none;
     border:none;
     margin-left: 0.8em;
@@ -185,42 +190,47 @@ main > section > nav > a > i{
 }
 
 .formato-boton{
-    position:absolute;
+    /*position:absolute;*/
+    display:inline-block;
     background-color: #519839;
     color:white;
     padding:0.5em;
-    top:12em;
-    left:2em;
+    /*top:50em;
+    left:2em;*/
     font-size:14px;
     text-decoration:none;
-    width:8%;
-    height: 5vh;
+    width:30%;
+    /*height: 5vh;*/
+    margin-left:1em;
     border-radius: 2%;
     outline: none;
-    margin:0.8em;
+    height: auto;
 }
 .format-button-close{
-    position:relative;
+    /*position:relative;*/
+   /* display:inline-block;*/
     background-color: none;
     left:3.5em;
-    top:1.2em;
-    font-size:250%;
+    /*top:1.2em;*/
+    /*padding-top: 2%;*/
+    font-size:220%;
     background-color: #e2e4e6;
     border:none;
-    width: 5%;
-    height: 3vh;
+    width: 15%;
+   /* height: 10%;*/
 }
 
 /* FORMATOS PARA LA PARTE DONDE APARECE EL TITULO ALMACENADO Y EL LINK AGREGAR UNA TARJETA*/
 
 .formato-ContainerTitle{
-    display:inline-block;
+    /*display:inline-block;*/
     background-color: #e2e4e6;
     width:20%;
     height: 12vh;
     border-radius:3%;
     margin:2%;
-
+    height: auto;
+    overflow: auto;
 }
 .formato-newLink-tarjeta{
     display:inline-block;
@@ -233,6 +243,7 @@ main > section > nav > a > i{
 
 .format-title{
     margin-left: 0.5em;
+    word-wrap: break-word;
 }
 
 .formato-newLink-tarjeta:hover{
@@ -243,9 +254,12 @@ main > section > nav > a > i{
 
 .formato-newContainer-textArea{
     display:inline-block;
+    height: auto;
+    word-wrap: break-word;
     background-color: #cce1f7;
     width:20%;
-    height: 28vh;
+    /*height: 28vh;*/
+    /*height: auto;*/
     border-radius:3%;
     margin:2%;
 }
@@ -255,7 +269,13 @@ main > section > nav > a > i{
 
 .boton-añadir{
     display: inline-block;
-    top:18em;
+    margin-bottom:1em;
+   /* top:18em;*/
+}
+.close2{
+    left:45%;
+    top:10%;
+    background-color: #cce1f7;
 }
 
 /* FORMATOS PARA COLOCAR LOS DATOS GUARDADOS DE TITLE Y TEXTAREA*/
@@ -264,18 +284,19 @@ main > section > nav > a > i{
     display:inline-block;
     background-color: #e2e4e6;
     width:20%;
-    height: 28vh;
+    height:auto;
     border-radius:3%;
     margin:2%;
-
-    height: 35vh;
+    overflow: auto;
 }
-.formatParrafo{
+
+.formatdivTextArea{
     max-width:90%;
     background-color: white;
     border-radius: 5%;
     margin:5%;
     font-family: cursive;
-    
+    height: auto;
+    word-wrap: break-word;
 }
 
